--- a/app/admin/templates/base.html
+++ b/app/admin/templates/base.html
@@ -10,8 +10,12 @@
   <link rel="stylesheet" href="{{ url_for('admin:statics', path='css/select2.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('admin:statics', path='css/flatpickr.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('admin:statics', path='css/main.css') }}">
+  {% if admin.favicon_url %}
+  <link rel="icon" href="{{ admin.favicon_url }}">
+  {% endif %}
   {% block head %}
   {% endblock %}
+  <title>{{ admin.title }}</title>
 </head>
 
 <body>
