--- a/app/admin/templates/sqladmin/_macros.html
+++ b/app/admin/templates/sqladmin/_macros.html
@@ -1,9 +1,11 @@
 {% macro menu_category(menu, request) %}
-{% if menu.is_active(request) %}
+{% if menu.is_visible(request) and menu.is_accessible(request) %}
 <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle {% if menu.is_active(request) %}active{% endif %}" data-bs-toggle="dropdown"
     href="#">
-
+    <span class="nav-link-icon d-md-none d-lg-inline-block">
+      {% if menu.icon %}<i class="{{ menu.icon }}"></i>{% endif %}
+    </span>
     <span class="nav-link-title">{{ menu.display_name }}</span>
   </a>
   <div class="dropdown-menu show">
@@ -54,7 +56,10 @@
 
 {% macro render_field(field, kwargs={}) %}
 <div class="mb-3 form-group row">
-  {{ field.label(class_="form-label col-sm-2 col-form-label") }}
+  {{ field.label(
+    class_="form-label col-sm-2 col-form-label" + (' required-label' if field.flags.required else ''),
+    **({'title': "This is a required field"} if field.flags.required else {})
+  ) }}
   <div class="col-sm-10">
     {% if field.errors %}
     {{ field(class_="form-control is-invalid") }}
